--- a/sgsiding/src/components/styles/NavBar.css
+++ b/sgsiding/src/components/styles/NavBar.css
@@ -15,8 +15,12 @@ header {
   -webkit-backdrop-filter: blur(8px);
   min-height: 80px;
   width: 100%;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 50;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .link-btns {
